--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <header class="bg-slate-900 text-white py-4 shadow">
       <div class="max-w-6xl mx-auto px-4 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-2">
         <div>
-          <h1 class="text-xl font-semibold">槓桿適用度評估工具</h1>
+          <h1 class="text-xl font-semibold">槓桿適用度評估工具v2.0</h1>
           <p class="text-sm text-slate-300">
             參考 Thomas J. Anderson 的債務觀，用個人化數字檢查：考慮使用信貸投資指數型 ETF，結構上是否在可承受區。
           </p>
         </div>
         <div class="text-xs sm:text-sm text-slate-300">
-          本工具僅為教育用途，非投資或借貸建議。
+          本工具僅為教育用途，非投資或借貸建議。 creat by Ray的學習筆記 https://vocus.cc/user/5ad17150fd89780001e2bcb4
         </div>
       </div>
     </header>
