--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           </p>
         </div>
         <div class="text-xs sm:text-sm text-slate-300">
-          本工具僅為教育用途，非投資或借貸建議。 creat by Ray的學習筆記 https://vocus.cc/user/5ad17150fd89780001e2bcb4
+          本工具僅為教育用途，非投資或借貸建議。 By Ray的學習筆記 https://vocus.cc/user/5ad17150fd89780001e2bcb4
         </div>
       </div>
     </header>
